Upgrade to Karaf 4.2.1
Signed-off-by: Wouter Born <eclipse@maindrain.net>